force-app/main/default/objects/Opportunity_SME__c/Opportunity_SME__c.object-meta.xml
<CustomObject>
    <label>Opportunity SME</label>
    <nameField>
        <displayFormat>OS-{0000}</displayFormat>
        <label>Opportunity SME Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity SMEs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>